--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ DB_DATABASE=user_management
 
 // .env
 USER_EMAIL=admin@doutor.com
-USER_PASSWORD=12345678
+USER_PASSWORD=LuciBrocas
 JWT_SECRET=segredo123
